prepare guest authentication